[package]
name = "cli"
version = "0.1.0"
authors = ["Radoslaw Kumorek <radoslaw.kumorekit@gmail.com"]
edition = "2021"

[[bin]]
name = "transaction"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }

anyhow = "1.0.82"
console = "0.15.7"
env_logger = "0.10.0"
log = "0.4.21"