[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
log = "~0"
serde = { version = "~1", features = ["derive"] }
thiserror = "~1"
tokio = { version = "1.37.0", features = ["full"] }